<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dk_color_FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/dk_mc_banner" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_banner"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">



            <Button
                android:id="@+id/tv_host"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/dk_btn_mc_bg"
                android:text="@string/dk_kit_multi_control_host"
                android:textAllCaps="false"
                android:textColor="@color/dk_color_FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_client"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/dk_btn_mc_bg"
                android:text="@string/dk_kit_multi_control_client"
                android:textAllCaps="false"
                android:textColor="@color/dk_color_FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_record"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/dk_btn_mc_bg"
                android:text="@string/dk_kit_multi_control_record"
                android:textAllCaps="false"
                android:textColor="@color/dk_color_FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_upload"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/dk_btn_mc_bg"
                android:text="@string/dk_kit_multi_control_upload"
                android:textAllCaps="false"
                android:textColor="@color/dk_color_FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_datas"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/dk_btn_mc_bg"
                android:text="@string/dk_kit_multi_control_list"
                android:textAllCaps="false"
                android:textColor="@color/dk_color_FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
